Warning is displayed when disabling viewport of constraint object #60566

Closed
opened 2019-01-16 16:44:28 +01:00 by Katsuya Tomono · 6 comments

Warning is displayed when disabling viewport of constraint object

System Information
Operating system: Windows10 64bit
Graphics card: GTX1080

Blender Version
Broken: 2.80 84c06e996a7a-win64

  1. Display system cosole.
  2. Create two rigid bodies.
  3. Create one empty object and constrain the rigid body.
  4. Invalidate viewport of empty object with outliner.
  5. A message appears on the console.

If there are a lot of constraint objects, the response of the operation will be worse accordingly.
Also, if it is invalid, it is kept waiting for each operation (addition or deletion) of the object.
I am at a loss as to whether it is a bug or not.
In the attached file, if collection1 is invalidated, it will be displayed in large quantities.
If it does not come out there is possibility of environmental dependence, so I can not confirm it.
To avoid it, if you delete constraints of rigid body world setting, it will not appear at all.

Messages to be displayed:

find_node component: Could not find ID OBEmpty
add_relation(RigidBodyConstraint -> RBC.Object_1) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM))
add_relation(RigidBodyConstraint -> RBC.Object_1) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_TRANSFORM_COPY)) was ok
find_node component: Could not find ID OBEmpty
add_relation(RigidBodyConstraint -> RBC.Object_2) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM))
add_relation(RigidBodyConstraint -> RBC.Object_2) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_TRANSFORM_COPY)) was ok
find_node component: Could not find ID OBEmpty
add_relation(RigidBodyConstraint Transform -> RB Simulation) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM))
add_relation(RigidBodyConstraint Transform -> RB Simulation) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_SIM)) was ok

Warning is displayed when disabling viewport of constraint object System Information Operating system: Windows10 64bit Graphics card: GTX1080 Blender Version Broken: 2.80 84c06e996a7a-win64 1. Display system cosole. 2. Create two rigid bodies. 3. Create one empty object and constrain the rigid body. 4. Invalidate viewport of empty object with outliner. 5. A message appears on the console. If there are a lot of constraint objects, the response of the operation will be worse accordingly. Also, if it is invalid, it is kept waiting for each operation (addition or deletion) of the object. I am at a loss as to whether it is a bug or not. In the attached file, if collection1 is invalidated, it will be displayed in large quantities. If it does not come out there is possibility of environmental dependence, so I can not confirm it. To avoid it, if you delete constraints of rigid body world setting, it will not appear at all. Messages to be displayed: find_node component: Could not find ID OBEmpty add_relation(RigidBodyConstraint -> RBC.Object_1) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM)) add_relation(RigidBodyConstraint -> RBC.Object_1) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_TRANSFORM_COPY)) was ok find_node component: Could not find ID OBEmpty add_relation(RigidBodyConstraint -> RBC.Object_2) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM)) add_relation(RigidBodyConstraint -> RBC.Object_2) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_TRANSFORM_COPY)) was ok find_node component: Could not find ID OBEmpty add_relation(RigidBodyConstraint Transform -> RB Simulation) - Could not find op_from (ComponentKey(OBEmpty, TRANSFORM)) add_relation(RigidBodyConstraint Transform -> RB Simulation) - Failed, but op_to (OperationKey(type: TRANSFORM, component name: '', operation code: RIGIDBODY_SIM)) was ok
Author

Added subscriber: @misty

Added subscriber: @misty
Author
[rigid_warning.blend](https://archive.blender.org/developer/F6307112/rigid_warning.blend)

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 14:49:54 +01:00

@Sergey are these prints anything to worry about?

They are printed on load and if you disable the collection in viewport.

@Sergey are these prints anything to worry about? They are printed on load and if you disable the collection in viewport.

This issue was referenced by 55e171be33

This issue was referenced by 55e171be3349b22ada9b84d36067d0a6f00db7f7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60566
No description provided.